--- a/assets/app/shared/card/button/button.component.html
+++ b/assets/app/shared/card/button/button.component.html
@@ -1,5 +1,3 @@
-<a class="imgWrapper" #buttonBackground>
-    <div>
-        <img [src]="img"/>
-    </div>
-</a>
+<md-grid-tile #buttonBackground>
+    <img [src]="img"/>
+</md-grid-tile>
