--- a/assets/app/student/user-profile/avatar/avatar.component.css
+++ b/assets/app/student/user-profile/avatar/avatar.component.css
@@ -1,39 +1,23 @@
-#firstAvatarImg, #secondAvatarImg {
-    width: 250px;
-    height: 500px;
-}
-
-#firstAvatarImg{
-    position: absolute;
-
-}
-
-#secondAvatarImg{
-    position: relative;
-}
-
-#avatarLArrow {
-    position: absolute;
-    top:200px;
-    width: 25px;
-    height:25px;
-    left: 5px;
-    cursor: pointer;
-}
-
-#avatarRArrow {
-    position: absolute;
-    top:200px;
-    width: 25px;
-    height:25px;
-    right: 5px;
-    cursor: pointer;   
-}
-
 #avatarWrapper{
     position: relative;
     width:256px;
     height:506px;
     border: solid black; 
     margin: auto;
+}
+
+img {
+    display: block;
+    position: absolute;
+    width: 250px;
+    height: 250px;
+}
+
+.editMenu{
+    display: inline-block;
+    vertical-align: top;
+}
+
+button {
+    margin-bottom: 15px;
 }
