--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
 <head>
     <base href="/">
     <title>Angular 2 Messenger</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
     <link rel='stylesheet' href='../stylesheets/style.css'/>
     <link rel='stylesheet' href='../stylesheets/indigo-pink.css'/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
