--- a/assets/app/student/games/games-list/games-list.component.html
+++ b/assets/app/student/games/games-list/games-list.component.html
@@ -3,8 +3,8 @@
 <br />
 <div class="row">
     <div class="col-sm-4">
-        <a [routerLink]="['/games/mathBingo']">
-            <!--<img src="../../assets/games/MathBingo.jpg" />-->
+        <a [routerLink]="['math-bingo']">
+            <img src="../../../assets/games/MathBingo.jpg" />
             <p class="gameName">Math Bingo</p>
         </a>
     </div>
@@ -12,8 +12,8 @@
         
     </div>
     <div class="col-sm-4">
-        <a [routerLink]="['/games/vocabMatch']">
-            <!--<img src="../../assets/games/VocabMatch.jpg" />-->
+        <a [routerLink]="['vocab-match']">
+            <img src="../../../assets/games/VocabMatch.jpg" />
             <p class="gameName">vocab-match</p>
         </a>
     </div>
