--- a/assets/app/navbar/navbar.component.css
+++ b/assets/app/navbar/navbar.component.css
@@ -1,12 +1,15 @@
-.active-link {
-    color: mediumpurple;
-}
-.coin{
+.coin {
     width: 20px;
     height: 20px;
     display: inline-block;
 }
 
-#coinWrapper{
+#coinWrapper {
     width: 150px;
 }
+
+a {
+    padding-right: 4%;
+    text-decoration: none;
+}
+
