--- a/assets/app/student/games/games-list/games-list.component.css
+++ b/assets/app/student/games/games-list/games-list.component.css
@@ -7,16 +7,15 @@ img{
 
 h1{
     text-align: center;
-    color: white;
 }
 
 .gameWrapper{
     margin: auto;
+    text-align: center;
 }
 
 .gameName{
     font-size: 25px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
-    color: white;
 }
