--- a/assets/app/student/games/math-bingo/math-bingo.component.css
+++ b/assets/app/student/games/math-bingo/math-bingo.component.css
@@ -1,4 +1,4 @@
-h1, h3, th{
+h1, h3, h2, th{
     font-family: Georgia, "Times New Roman";
 }
 
@@ -9,8 +9,8 @@ h1, h3{
 
 table{
     border-collapse: collapse;
-    /*margin-left:auto; 
-    margin-right:auto;*/
+    margin-left:auto; 
+    margin-right:auto;
 
     text-align:center; 
 }
@@ -24,4 +24,8 @@ th, td{
 span{
     background-color: green;
     width: max;
+}
+
+p{
+    text-align: center;
 }
