--- a/assets/app/student/games/vocab-match/vocab-match.component.html
+++ b/assets/app/student/games/vocab-match/vocab-match.component.html
@@ -1,16 +1,16 @@
+<h1>Vocabulary Match</h1>
 <div style="min-width: 900px"> 
     <div fxLayout="row" fxFlex="100" >
         <div  fxFlex="50" >
-        <div class="wrapper" *ngFor="let row of vocabDefs">
-                <div class="container defs">
+        <ul class="wrapper" *ngFor="let row of vocabDefs">
+            <li class="container defs">
                 {{row}}
-                </div>
-            <div class="container drop" (dragover)="dragover($event)" (drop)="onDrop($event)">
-            </div>
-        </div>
+            <li class="container drop" (dragover)="dragover($event)" (drop)="onDrop($event, row)">
+                	&nbsp;
+        </ul>
         </div>
         <div  fxFlex="50">
-            <div class="container words" *ngFor="let row of vocabWords" draggable="true">
+            <div class="container words" *ngFor="let row of vocabWords" draggable="true" (dragstart)="dragStart(row)">
             {{row}}
         </div>
         </div>
