--- a/assets/app/student/games/grade-sidenav/grade-sidenav.component.html
+++ b/assets/app/student/games/grade-sidenav/grade-sidenav.component.html
@@ -1,5 +1,5 @@
 <md-sidenav-container>
-  <md-sidenav #sidenav mode="push" >
+  <md-sidenav id="sidenav" #sidenav mode="push" >
      <md-card-title>
        <h3>Grades</h3>
        </md-card-title>
