--- a/assets/app/student/games/vocab-match/vocab-match.component.html
+++ b/assets/app/student/games/vocab-match/vocab-match.component.html
@@ -22,4 +22,4 @@
     
 </sq-grade-sidenav>
 
-<sq-win-dialog (playAgainSelect)="reload()" #winDialog></sq-win-dialog>
+<sq-end-game-dialog (playAgainSelect)="reload()" #winDialog></sq-end-game-dialog>
