--- a/assets/app/student/games/games-list/games-list.component.html
+++ b/assets/app/student/games/games-list/games-list.component.html
@@ -9,7 +9,9 @@
         </a>
     </div>
     <div class="col-sm-4">
-        
+        <a [routerLink]="['typing']">
+            Typing
+        </a>
     </div>
     <div class="col-sm-4">
         <a [routerLink]="['vocab-match']">
