--- a/assets/app/student/games/math-bingo/math-bingo.component.html
+++ b/assets/app/student/games/math-bingo/math-bingo.component.html
@@ -37,4 +37,4 @@
     </div> 
 </sq-grade-sidenav>
 
-<sq-win-dialog (playAgainSelect)="reload()" #winDialog></sq-win-dialog>
+<sq-end-game-dialog (playAgainSelect)="reload()" #winDialog></sq-end-game-dialog>
