--- a/assets/app/student/games/games-list/games-list.component.html
+++ b/assets/app/student/games/games-list/games-list.component.html
@@ -10,13 +10,22 @@
     </div>
     <div class="col-sm-4">
         <a [routerLink]="['typing']">
-            Typing
+            <img src="../../../assets/games/Typing.jpg" />
+            <p class="gameName">Typing</p>
         </a>
     </div>
     <div class="col-sm-4">
         <a [routerLink]="['vocab-match']">
             <img src="../../../assets/games/VocabMatch.jpg" />
-            <p class="gameName">vocab-match</p>
+            <p class="gameName">Vocab Match</p>
+        </a>
+    </div>
+</div>
+<div class="row">
+    <div class="col-sm-4">
+        <a [routerLink]="['math-clouds']">
+            <img src="../../../assets/games/VocabMatch.jpg" />
+            <p class="gameName">Math Clouds</p>
         </a>
     </div>
 </div>
