--- a/assets/app/student/games/math-clouds/math-clouds.component.html
+++ b/assets/app/student/games/math-clouds/math-clouds.component.html
@@ -1,13 +1,28 @@
 <sq-grade-sidenav (buttonClicked)="changeGradeLevel($event)">
 
-<div class="frame">
-<div class="cloud" #cloud1></div>
-<div class="cloud" #cloud2></div>
-<div class="cloud" #cloud3></div>
+    <div class="frame">
+         <div fxLayout="column" fxFlex="100">
+            <div fxLayout="row" fxFlex="100" fxLayout.xs="column" fxLayoutGap="25px" fxLayoutAlign="center">
+                <div class="pipe" #pipe1>
+                    <div class="pipe-text">{{displayedProblems[0]}}</div>
+                </div>
+                <div class="pipe" #pipe2>
+                    <div class="pipe-text">{{problem2}}</div>
+                </div>
+                <div class="pipe" #pipe3>
+                    <div class="pipe-text">{{problem3}}</div>
+                </div>
+            </div>
+            <div class="solution">
+                <div class="solution-text">{{displayedMathProblem.solution}}</div>
+            </div>
 
-<div class="flower"></div>
-
-
-</div>
+            <div class="box-container" fxLayout="row" fxFlex="100" fxLayout.xs="column" fxLayoutGap="25px" fxLayoutAlign="center" >
+                <div class="box" #box1></div>
+                <div class="box" #box2></div>
+                <div class="box" #box3></div>
+            </div>
+         </div>
+    </div>
 </sq-grade-sidenav>
 <sq-end-game-dialog (playAgainSelect)="reload()" #endGameDialog></sq-end-game-dialog>
