--- a/assets/app/student/games/math-clouds/math-clouds.component.html
+++ b/assets/app/student/games/math-clouds/math-clouds.component.html
@@ -1,9 +1,21 @@
 <sq-grade-sidenav (buttonClicked)="changeGradeLevel($event)">
 
+
+    <div class="title">Title</div>
+    <div class="score">{{scoreText}}</div>
+    <div class="errors">
+        <div>
+            <md-icon>clear</md-icon>
+            <md-icon>clear</md-icon>
+            <md-icon>clear</md-icon>
+            <md-icon>clear</md-icon>
+            <md-icon>clear</md-icon>
+        </div>
+    </div>
     <div class="frame">
         <div fxLayout="row" fxFlex="100" fxLayout.xs="column" fxLayoutGap="25px" fxLayoutAlign="center">
             <div class="wall" fxFlex="15"></div>
-            <div fxLayout="column" fxFlex="70">
+            <div fxLayout="column" fxFlex="71">
                 <div fxLayout="row" fxFlex="100" fxLayout.xs="column" fxLayoutGap="25px" fxLayoutAlign="center">
                     <div class="pipe" #pipe1 (click)="checkCorrect(0)">
                         <div class="pipe-text">{{displayedProblems[0]}}</div>
@@ -15,11 +27,11 @@
                         <div class="pipe-text">{{displayedProblems[2]}}</div>
                     </div>
                 </div>
-                <div class="solution" [@move]="state">
+                <div class="solution" #box>
                     <div class="solution-text">{{displayedMathSolution.solution}}</div>
                 </div>
 
-                <div class="box-container" fxLayout="row" fxFlex="100" fxLayout.xs="column" fxLayoutGap="25px" fxLayoutAlign="center" >
+                <div class="box-container" fxLayout="row" fxFlex="100" fxLayout.xs="column" fxLayoutGap="25px" fxLayoutAlign="center">
                     <div class="box" #box1></div>
                     <div class="box" #box2></div>
                     <div class="box" #box3></div>
@@ -29,4 +41,4 @@
         </div>
     </div>
 </sq-grade-sidenav>
-<sq-end-game-dialog (playAgainSelect)="reload()" #endGameDialog></sq-end-game-dialog>
+<sq-end-game-dialog (playAgainSelect)="replay()" #endGameDialog></sq-end-game-dialog>
