--- a/assets/app/student/games/games-list/games-list.component.html
+++ b/assets/app/student/games/games-list/games-list.component.html
@@ -28,4 +28,10 @@
             <p class="gameName">Math Clouds</p>
         </a>
     </div>
+    <div class="col-sm-4">
+        <a [routerLink]="['word-pipes']">
+            <img src="../../../assets/games/VocabMatch.jpg" />
+            <p class="gameName">Word Pipes</p>
+        </a>
+    </div>
 </div>
