--- a/assets/app/student/games/word-pipes/word-pipes.component.html
+++ b/assets/app/student/games/word-pipes/word-pipes.component.html
@@ -26,7 +26,7 @@
                              <td><div class="dropBox"></div></td>
                              <td><div class="dropBox"></div></td>
                              <td><div class="dropBox"></div></td>
-                             <td><div class="endBox"></div></td>
+                             <td><div class="endBox">sup bitch</div></td>
                          </tr>
                          <tr>
                              <td><div class="startBox"></div></td>
